--- a/html/module_theScienceModelMentality.html
+++ b/html/module_theScienceModelMentality.html
@@ -20,7 +20,7 @@
             <div class="text-2xl font-bold">PRISMA</div>
             <nav>
                 <ul class="flex space-x-4">
-                    <li><a href="landingTailwind.html" class="hover:text-teal-500">Home</a></li>
+                    <li><a href="../index.html" class="hover:text-teal-500">Home</a></li>
                     <li><a href="module_theScienceModelMentality.html" class="hover:text-teal-500">Modules</a></li>
                     <li><a href="#" class="hover:text-teal-500">About</a></li>
                     <li><a href="#" class="hover:text-teal-500">Contact</a></li>
