--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="text-2xl font-bold">PRISMA</div>
         <nav>
             <ul class="flex space-x-4">
-                <li><a href="../html/landingTailwind.html" class="hover:text-teal-500">Home</a></li>
+                <li><a href="index.html" class="hover:text-teal-500">Home</a></li>
                 <li><a href="../html/module_theScienceModelMentality.html" class="hover:text-yellow-500">Modules</a></li>
                 <li><a href="#" class="hover:text-teal-500">About</a></li>
                 <li><a href="#" class="hover:text-teal-500">Contact</a></li>
