--- a/html/signIn.html
+++ b/html/signIn.html
@@ -23,7 +23,7 @@
                 <label for="password" class="block text-sm font-semibold text-gray-600">Password</label>
                 <input type="password" id="password" name="password" class="mt-1 p-2 w-full border rounded-md" required>
             </div>
-            <button type="submit" class="w-full p-2 bg-gray-800 hover:bg-amber-700 rounded-md text-white">Sign In</button>
+            <button type="submit" class="w-full p-2 bg-gray-800 hover:bg-amber-700 rounded-md text-white">Log In</button>
         </form>
         <p class="mt-4 text-sm text-gray-600">New to PRISMA? <a href="../html/signUp.html" class="text-emerald-400 hover:underline">Create an Account</a></p>
     </div>
