--- a/html/module_theScienceModelMentality.html
+++ b/html/module_theScienceModelMentality.html
@@ -17,23 +17,31 @@
     <!-- Header -->
     <header class="bg-gray-800 text-white p-6">
         <div class="container mx-auto flex justify-between items-center animate__animated animate__fadeInDown">
-            <div class="text-2xl font-bold">PRISMA</div>
+            <div
+                class="text-2xl font-bold bg-cover bg-center flex flex-col justify-center animate__animated animate__fadeIn">
+                <img src="/Images/logo-lettersonly-white.png" alt="" class="h-10 w-auto">
+            </div>
             <nav>
                 <ul class="flex space-x-4">
-                    <li><a href="../index.html" class="hover:text-teal-500">Home</a></li>
-                    <li><a href="module_theScienceModelMentality.html" class="hover:text-teal-500">Modules</a></li>
+                    <li><a href="/index.html" class="hover:text-yellow-500">Home</a></li>
+                    <li><a href="../html/module_theScienceModelMentality.html" class="hover:text-yellow-500">Modules</a>
+                    </li>
                     <li><a href="#" class="hover:text-teal-500">About</a></li>
                     <li><a href="#" class="hover:text-teal-500">Contact</a></li>
                 </ul>
             </nav>
+            <div class="hidden md:flex lg:justify-end">
+                <a href="/html/signIn.html" class="text-sm font-semibold leading-6 text-white">Log in <span aria-hidden="true">&rarr;</span></a>
+              </div>
         </div>
     </header>
 
     <!-- Hero Section for The Science Model & Mentality -->
     <section
         class="bg-cover bg-center bg-gradient-to-t from-black h-96 text-white text-center flex flex-col justify-center animate__animated animate__fadeIn" style= "background-image: linear-gradient(to bottom, rgba(31, 41, 55, 0), rgb(229, 231, 235)), url('../Images/translucent-leaf.png') ;" >
-        <h1 class="text-5xl mb-4">Levels of Biological Organization</h1>
-        <p class="text-xl mb-8">From molecules to biosphere: understanding the hierarchy.</p>
+        <h1 class="text-5xl mb-4 pt-10">Levels of Biological Organization</h1>
+        <hr class="w-10 flex flex-col justify-center animate__animated animate__fadeIn">
+        <p class="text-xl mb-8 p-10 pt-0">From molecules to biosphere: understanding the hierarchy.</p>
         <button
             class="mx-auto px-8 py-2 bg-teal-500 hover:bg-gray-800 transition-colors duration-300 animate__animated animate__pulse animate__infinite">Start
             Learning</button>
@@ -60,10 +68,11 @@
     <section class="bg-gray-800 text-white py-12 animate__animated animate__fadeIn">
         <div class="container mx-auto text-center">
             <h2 class="text-3xl mb-6">Interactive Learning</h2>
-            <div class="sketchfab-embed-wrapper"> <iframe title="Biology plant cell" frameborder="0" allowfullscreen
+            <div class="sketchfab-embed-wrapper flex flex-col justify-center animate__animated animate__fadeIn"> <iframe title="Biology plant cell" frameborder="0" allowfullscreen
                     mozallowfullscreen="true" webkitallowfullscreen="true"
                     allow="autoplay; fullscreen; xr-spatial-tracking" xr-spatial-tracking
-                    execution-while-out-of-viewport execution-while-not-rendered web-share width="640" height="480"
+                    execution-while-out-of-viewport execution-while-not-rendered web-share width="auto" height="300
+                    "
                     src="https://sketchfab.com/models/0d87fbe2581b4cabae809bd6aaa7d56b/embed?autospin=1&autostart=1&preload=1&ui_theme=dark">
                 </iframe>
                 <p style="font-size: 13px; font-weight: normal; margin: 5px; color: #4A4A4A;"> <a
