--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>PRISMA: Multisensory Learning</title>
+    <link rel="website icon" type="png" href="/Images/plainLogo.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
@@ -47,7 +48,7 @@
     <div class="absolute w-full h-full bg-gradient-to-b from-transparent to-gray-200"></div>
     <div class="relative z-10 text-center text-white">
         <h1 class="text-5xl mb-4">Welcome to PRISMA</h1>
-        <p class="text-xl mb-8">Experience multisensory learning like never before.</p>
+        <p class="text-xl mb-8 p-10 pt-0">Experience multisensory learning like never before.</p>
         <button class="px-8 py-2 bg-teal-500 hover:bg-gray-800 transition-colors duration-300 animate__animated animate__pulse animate__infinite">Explore Modules</button>
     </div>
 </section>
@@ -64,13 +65,21 @@
                         <h2 class="text-3xl mb-6 text-center">Featured Modules</h2>
                         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                             <div class="bg-white rounded-lg shadow-md p-6">
-                                <img src="../Images/module-image.jpg" alt="Module Image"
+                                <img src="/Images/biological-levels.png" alt="Module Image"
                                     class="w-full h-64 object-cover rounded-t-lg mb-4">
                                 <h3 class="text-xl mb-2">Biological Systems</h3>
                                 <p class="text-gray-600 mb-4">From molecules to biosphere: <br> understanding the hierarchy.</p>
                                 <a href="#" class="text-teal-500 hover:underline">Learn More</a>
                             </div>
                             <!-- Additional module cards can be added here -->
+                            <div class="bg-white rounded-lg shadow-md p-6">
+                                <img src="../Images/module-image.jpg" alt="Module Image"
+                                    class="w-full h-64 object-cover rounded-t-lg mb-4">
+                                <h3 class="text-xl mb-2">Module Title</h3>
+                                <p class="text-gray-600 mb-4">Brief description of the module...</p>
+                                <a href="#" class="text-teal-500 hover:underline">Learn More</a>
+                            </div>
+
                             <div class="bg-white rounded-lg shadow-md p-6">
                                 <img src="../Images/module-image.jpg" alt="Module Image"
                                     class="w-full h-64 object-cover rounded-t-lg mb-4">
